📝 write DD guide
Signed-off-by: burgholzer <burgholzer@me.com>

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -225,6 +225,15 @@
   primaryclass        = {cond-mat, physics:quant-ph},
 }
 
+@inproceedings{sanderStrippingQuantumDecision2024,
+  title               = {Stripping Quantum Decision Diagrams of their Identity},
+  author              = {Sander, Aaron and Florea, Ioan-Albert and Burgholzer, Lukas and Wille, Robert},
+  year                = {2024},
+  booktitle           = qsw,
+  pages               = {168--174},
+  doi                 = {10.1109/QSW62656.2024.00032},
+}
+
 @inproceedings{smithQuantumLogicSynthesis2019,
   title               = {Quantum Logic Synthesis with Formal Verification},
   author              = {Smith, Kaitlin N. and Thornton, Mitchell A.},
@@ -307,6 +316,14 @@
   year                = {2022},
   journal             = tqc,
   doi                 = {10.1145/3491246},
+}
+
+@inproceedings{willeVisualizingDecisionDiagrams2021,
+  title               = {Visualizing decision diagrams for quantum computing},
+  author              = {Wille, Robert and Burgholzer, Lukas and Artner, Michael},
+  year                = {2021},
+  booktitle           = date,
+  doi                 = {10.23919/DATE51398.2021.9474236},
 }
 
 @article{zulehnerAdvancedSimulationQuantum2019,
