--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -101,7 +101,7 @@
 }
 
 @article{duncanGraphtheoreticSimplificationQuantum2020,
-  title               = {Graph-theoretic {{Simplification}} of {{Quantum Circuits}} with the {{ZX-calculus}}},
+  title               = {Graph-theoretic Simplification of Quantum Circuits with the {ZX}-calculus},
   author              = {Duncan, Ross and Kissinger, Aleks and Perdrix, Simon and {van de Wetering}, John},
   year                = {2020},
   journal             = {Quantum},
@@ -111,7 +111,7 @@
 }
 
 @inproceedings{grurlAutomaticImplementationEvaluation2023,
-  title               = {Automatic {{Implementation}} and {{Evaluation}} of {{Error-Correcting Codes}} for {{Quantum Computing}}: {{An Open-Source Framework}} for {{Quantum Error Correction}}},
+  title               = {Automatic Implementation and Evaluation of Error-Correcting Codes for Quantum Computing: An Open-Source Framework for Quantum Error Correction},
   shorttitle          = {Automatic {{Implementation}} and {{Evaluation}} of {{Error-Correcting Codes}} for {{Quantum Computing}}},
   author              = {Grurl, Thomas and Pichler, Christoph and Fu{\ss}, J{\"u}rgen and Wille, Robert},
   year                = {2023},
@@ -178,7 +178,7 @@
 }
 
 @inproceedings{hillmichExploitingQuantumTeleportation2021,
-  title               = {Exploiting {{Quantum Teleportation}} in {{Quantum Circuit Mapping}}},
+  title               = {Exploiting Quantum Teleportation in Quantum Circuit Mapping},
   author              = {Hillmich, Stefan and Zulehner, Alwin and Wille, Robert},
   year                = {2021},
   booktitle           = {Asia and South Pacific Design Automation Conf.},
@@ -268,7 +268,7 @@
 }
 
 @article{pehamOptimalSubarchitecturesQuantum2023,
-  title               = {On {{Optimal Subarchitectures}} for {{Quantum Circuit Mapping}}},
+  title               = {On Optimal Subarchitectures for Quantum Circuit Mapping},
   author              = {Peham, Tom and Burgholzer, Lukas and Wille, Robert},
   year                = {2023},
   journal             = {ACM Transactions on Quantum Computing},
@@ -289,7 +289,7 @@
 }
 
 @inproceedings{sanderHamiltonianSimulationDecision2023,
-  title               = {Towards hamiltonian simulation with decision diagrams},
+  title               = {Towards {H}amiltonian simulation with decision diagrams},
   author              = {Sander, Aaron and Burgholzer, Lukas and Wille, Robert},
   year                = {2023},
   booktitle           = {Int'l {{Conf}}. on {{Quantum Computing}} and {{Engineering}}},
@@ -299,7 +299,7 @@
 }
 
 @article{schmidComputationalCapabilitiesCompiler2024,
-  title               = {Computational {{Capabilities}} and {{Compiler Development}} for {{Neutral Atom Quantum Processors}} - {{Connecting Tool Developers}} and {{Hardware Experts}}},
+  title               = {Computational Capabilities and Compiler Development for Neutral Atom Quantum Processors - Connecting Tool Developers and Hardware Experts},
   author              = {Schmid, Ludwig and Locher, David and Rispler, Manuel and Blatt, Sebastian and Zeiher, Johannes and M{\"u}ller, Markus and Wille, Robert},
   year                = {2024},
   journal             = {Quantum Science and Technology},
@@ -307,7 +307,7 @@
 }
 
 @inproceedings{schmidHybridCircuitMapping2024,
-  title               = {Hybrid {{Circuit Mapping}}: {{Leveraging}} the {{Full Spectrum}} of {{Computational Capabilities}} of {{Neutral Atom Quantum Computers}}},
+  title               = {Hybrid Circuit Mapping: Leveraging the Full Spectrum of Computational Capabilities of Neutral Atom Quantum Computers},
   author              = {Schmid, Ludwig and Park, Sunghey and Wille, Robert},
   year                = {2024},
   booktitle           = {Design Automation Conf.},
@@ -324,7 +324,7 @@
 }
 
 @inproceedings{tsaiBitSlicingHilbertSpace2021,
-  title               = {Bit-Slicing the Hilbert Space: Scaling Up Accurate Quantum Circuit Simulation},
+  title               = {Bit-Slicing the {H}ilbert Space: Scaling Up Accurate Quantum Circuit Simulation},
   author              = {Tsai, Yuan-Hung and Jiang, Jie-Hong R. and Jhang, Chiao-Shan},
   year                = {2021},
   booktitle           = {Design Automation Conference},
@@ -351,7 +351,7 @@
 }
 
 @incollection{willeDecisionDiagramsQuantum2023,
-  title               = {Decision {{Diagrams}} for {{Quantum Computing}}},
+  title               = {Decision Diagrams for Quantum Computing},
   author              = {Wille, Robert and Hillmich, Stefan and Burgholzer, Lukas},
   year                = {2023},
   booktitle           = {Design {{Automation}} of {{Quantum Computers}}},
@@ -368,7 +368,7 @@
 }
 
 @inproceedings{willeMQTHandbookSummary2024,
-  title               = {The {{MQT Handbook}}: {{A Summary}} of {{Design Automation Tools}} and {{Software}} for {{Quantum Computing}}},
+  title               = {The {MQT Handbook}: A Summary of Design Automation Tools and Software for Quantum Computing},
   shorttitle          = {The {{MQT Handbook}}},
   author              = {Wille, Robert and Berent, Lucas and Forster, Tobias and Kunasaikaran, Jagatheesan and Mato, Kevin and Peham, Tom and Quetschlich, Nils and Rovara, Damian and Sander, Aaron and Schmid, Ludwig and Schoenberger, Daniel and Stade, Yannick and Burgholzer, Lukas},
   booktitle           = {IEEE International Conference on Quantum Software},
@@ -388,7 +388,7 @@
 }
 
 @incollection{willeVerificationQuantumCircuits2022,
-  title               = {Verification of {{Quantum Circuits}}},
+  title               = {Verification of Quantum Circuits},
   author              = {Wille, Robert and Burgholzer, Lukas},
   year                = {2022},
   booktitle           = {Handbook of {{Computer Architecture}}},
